# metagene

./: .gitignore  CNAME  Makefile  README.md  pyproject.toml  test.bed
.github/workflows/: publish.yml
docs/: REPOSITORY_STRUCTURE.md  _config.yml  api-reference.md  examples.md  getting-started.md  index.md
metagene/: __init__.py  annotation.py  cli.py  config.py  download.py  get_features.py  gtf.py  io.py  map_to_local.py  overlap.py  plot.py  plotting.py  read_features.py  read_gtf.py  utils.py
metagene/data/: GRCm38.bed.parquet  GRCm39.bed.parquet  IRGSP-1.0.bed.parquet  TAIR10.bed.parquet  test.bed
scripts/: README.md  process_gtf_to_parquet.py  species_mapping_template.py  test_gtf_processing.py
test/: sites.bed  test_basic.py  test_builtin.py  test_demo.py  test_map_to_local.py
