[project]
name = "metagene"
version = "0.0.15"
description = "Metagene Profiling Analysis and Visualization"
authors = [{ name = "Ye Chang", email = "yech1990@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
keywords = ["DNA", "RNA", "metagene", "biology"]
dependencies = [
  "ruranges>=0.0.14",
  "matplotlib>=3.0.0,<4",
  "polars>=1.30.0",
  "pyarrow",
  "rich-click>=1.6.1,<2",
]

[project.urls]
Repository = "https://github.com/y9c/metagene"

[project.scripts]
metagene = "metagene.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metagene"]

[tool.black]
line-length = 79
