[project]
name = "metagene"
version = "0.0.16"
description = "Metagene Profiling Analysis and Visualization"
authors = [{ name = "Ye Chang", email = "yech1990@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
keywords = ["DNA", "RNA", "metagene", "biology"]
dependencies = [
  "ruranges>=0.0.14",
  "polars>=1.30.0",
  "matplotlib>=3.0.0,<4",
  "rich-click>=1.6.1,<2",
]

[project.urls]
Repository = "https://github.com/y9c/metagene"

[project.scripts]
metagene = "metagene.cli:cli"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metagene"]

[tool.black]
line-length = 79
